# cloudstorage-server

./: configure.ac
resources/: amazons3_login.html  mega_login.html  owncloud_login.html
src/: AuthorizationServer.cpp  AuthorizationServer.h  CloudServer.cpp  CloudServer.h  CurlHttp.cpp  CurlHttp.h  DispatchServer.cpp  DispatchServer.h  FFmpegThumbnailer.cpp  FFmpegThumbnailer.h  GenericRequest.cpp  GenericRequest.h  HttpServer.cpp  HttpServer.h  Makefile.am  MicroHttpdServer.cpp  MicroHttpdServer.h  Utility.cpp  Utility.h  main.cpp
